# adventofcode-2022

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main_pr.yml  solutions.yml
lib/: CMakeLists.txt  bitmap.cpp  bitmap.h  coord.cpp  coord.h  fakefilesystem.cpp  fakefilesystem.h  libaoc.h  ranges.h  read.cpp  read.h  roll.h
src/: CMakeLists.txt  generate.py
src/01/: CMakeLists.txt  main.cpp
src/02/: CMakeLists.txt  main.cpp
src/03/: CMakeLists.txt  main.cpp
src/04/: CMakeLists.txt  main.cpp
src/05/: CMakeLists.txt  assignment.h  main.cpp  stacks.h
src/06/: CMakeLists.txt  main.cpp
src/07/: CMakeLists.txt  main.cpp
src/08/: CMakeLists.txt  main.cpp
src/09/: CMakeLists.txt  main.cpp  rope.h
src/10/: CMakeLists.txt  crt.h  main.cpp
src/11/: CMakeLists.txt  main.cpp  monkey.h
src/12/: CMakeLists.txt  main.cpp  topo.h
src/13/: CMakeLists.txt  main.cpp  packet.cpp  packet.h
src/14/: CMakeLists.txt  hourglass.cpp  hourglass.h  main.cpp
src/15/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.h
src/16/: CMakeLists.txt  main.cpp  steam.cpp  steam.h
src/17/: CMakeLists.txt  main.cpp  tetrastack.cpp  tetrastack.h
src/18/: CMakeLists.txt  cuboid.h  main.cpp
src/19/: CMakeLists.txt  main.cpp  robots.cpp  robots.h
src/20/: CMakeLists.txt  crypt.h  main.cpp
src/21/: CMakeLists.txt  main.cpp  monkey_math.cpp  monkey_math.h
src/22/: CMakeLists.txt  main.cpp  monkey_common.cpp  monkey_common.h  monkey_cube.cpp  monkey_cube.h  monkey_map.cpp  monkey_map.h
src/23/: CMakeLists.txt  grove.h  main.cpp
src/24/: CMakeLists.txt  main.cpp  winds.h
src/25/: CMakeLists.txt  hotair.h  main.cpp
