cmake_minimum_required(VERSION 3.22.0)
project(aoc22.18)

set(SOURCES main.cpp)
add_executable(aoc22.18 ${SOURCES})
target_compile_options(aoc22.18 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.18 aoc)
install(TARGETS aoc22.18 DESTINATION ${AOC22_INSTALL_BIN})
add_test(NAME test.18.1 COMMAND aoc22.18 ${AOC22_INPUT_DIR}/test.18 1 64)
add_test(NAME test.18.2 COMMAND aoc22.18 ${AOC22_INPUT_DIR}/test.18 2 58)
add_test(NAME aoc22.18.1 COMMAND aoc22.18 ${AOC22_INPUT_DIR}/aoc22.18 1)
add_test(NAME aoc22.18.2 COMMAND aoc22.18 ${AOC22_INPUT_DIR}/aoc22.18 2)
