cmake_minimum_required(VERSION 3.22.0)
project(aoc22.19)

set(SOURCES main.cpp robots.cpp)
add_executable(aoc22.19 ${SOURCES})
target_compile_options(aoc22.19 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.19 aoc)
install(TARGETS aoc22.19 DESTINATION ${AOC22_INSTALL_BIN})
#add_test(NAME test.19.1 COMMAND aoc22.19 ${AOC22_INPUT_DIR}/test.19 1 33)
#add_test(NAME test.19.2 COMMAND aoc22.19 ${AOC22_INPUT_DIR}/test.19 2 3472)
#add_test(NAME aoc22.19.1 COMMAND aoc22.19 ${AOC22_INPUT_DIR}/aoc22.19 1)
#add_test(NAME aoc22.19.2 COMMAND aoc22.19 ${AOC22_INPUT_DIR}/aoc22.19 2)
