cmake_minimum_required(VERSION 3.22.0)
project(aoc22.20)

set(SOURCES main.cpp)
add_executable(aoc22.20 ${SOURCES})
target_compile_options(aoc22.20 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.20 aoc)
install(TARGETS aoc22.20 DESTINATION ${AOC22_INSTALL_BIN})
add_test(NAME test.20.1 COMMAND aoc22.20 ${AOC22_INPUT_DIR}/test.20 1 3)
add_test(NAME test.20.2 COMMAND aoc22.20 ${AOC22_INPUT_DIR}/test.20 2 1623178306)
add_test(NAME aoc22.20.1 COMMAND aoc22.20 ${AOC22_INPUT_DIR}/aoc22.20 1 4914)
add_test(NAME aoc22.20.2 COMMAND aoc22.20 ${AOC22_INPUT_DIR}/aoc22.20 2)
