cmake_minimum_required(VERSION 3.22.0)
project(aoc22.22)

set(SOURCES main.cpp monkey_common.cpp monkey_map.cpp monkey_cube.cpp)
add_executable(aoc22.22 ${SOURCES})
target_compile_options(aoc22.22 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.22 aoc)
install(TARGETS aoc22.22 DESTINATION ${AOC22_INSTALL_BIN})
add_test(NAME test.22.1 COMMAND aoc22.22 ${AOC22_INPUT_DIR}/test.22 1 6032)
add_test(NAME test.22.2 COMMAND aoc22.22 ${AOC22_INPUT_DIR}/test.22 2 5031)
add_test(NAME aoc22.22.1 COMMAND aoc22.22 ${AOC22_INPUT_DIR}/aoc22.22 1)
add_test(NAME aoc22.22.2 COMMAND aoc22.22 ${AOC22_INPUT_DIR}/aoc22.22 2)
