cmake_minimum_required(VERSION 3.22.0)
project(aoc22.23)

set(SOURCES main.cpp)
add_executable(aoc22.23 ${SOURCES})
target_compile_options(aoc22.23 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.23 aoc)
install(TARGETS aoc22.23 DESTINATION ${AOC22_INSTALL_BIN})
add_test(NAME test.23.0a COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.0 1 25)
add_test(NAME test.23.0b COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.0 2 4)
add_test(NAME test.23.1a COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.1 1 110)
add_test(NAME test.23.1b COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.1 2 20)
#add_test(NAME test.23.2a COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.2 1 3877)
#add_test(NAME test.23.2b COMMAND aoc22.23 ${AOC22_INPUT_DIR}/test.23.2 2 982)
add_test(NAME aoc22.23.1 COMMAND aoc22.23 ${AOC22_INPUT_DIR}/aoc22.23 1)
add_test(NAME aoc22.23.2 COMMAND aoc22.23 ${AOC22_INPUT_DIR}/aoc22.23 2)
