cmake_minimum_required(VERSION 3.22.0)
project(aoc22.24)

set(SOURCES main.cpp)
add_executable(aoc22.24 ${SOURCES})
target_compile_options(aoc22.24 PRIVATE ${AOC22_CXX_FLAGS})
target_link_libraries(aoc22.24 aoc)
install(TARGETS aoc22.24 DESTINATION ${AOC22_INSTALL_BIN})
#add_test(NAME test.24.0 COMMAND aoc22.24 ${AOC22_INPUT_DIR}/test.24.0 1)
add_test(NAME test.24.1 COMMAND aoc22.24 ${AOC22_INPUT_DIR}/test.24.1 1 18)
add_test(NAME test.24.2 COMMAND aoc22.24 ${AOC22_INPUT_DIR}/test.24.1 2 54)
#add_test(NAME aoc22.24.1 COMMAND aoc22.24 ${AOC22_INPUT_DIR}/aoc22.24 1)
#add_test(NAME aoc22.24.2 COMMAND aoc22.24 ${AOC22_INPUT_DIR}/aoc22.24 2)
